# GooseUI

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.buildtools/cmake/: Zephyr.cmake
build_systems/cmake/: core.cmake  widgets.cmake
build_systems/cmake/modules/: FindWayland.cmake
build_systems/cmake/platform/: wayland.cmake  win32api.cmake  x11.cmake
cmake/.cmake/: core.cmake  graphics.cmake  platform.cmake  widgets.cmake
cmake/.cmake/graphics/: OpenGL.cmake  vulkan.cmake
docs/: README.md  TODO.md
include/GooseUI/: GooseUI.h  context.h  types.h
include/GooseUI/abstractions/: iFont.h  iRenderer.h  iWidget.h  iWindow.h
include/GooseUI/core/: enumerations.h  event.h  eventDispatcher.h  eventloop.h  types.h
include/GooseUI/core/templates/: renderBase.h  widgetBase.h
include/GooseUI/events/: event.h  eventDispatcher.h  eventLoop.h
include/GooseUI/font/: atlas.h  font.h  fontData.h  fontLayout.h  fontManager.h  glyph.h
include/GooseUI/graphics/: context.h  gl_loader.h  gl_renderer.h  layout.h  layoutCalculator.h  text.h
include/GooseUI/graphics/GL/: glLoader.h  glRenderer.h  glShaders.h
include/GooseUI/graphics/font/: font.h  fontAtlas.h  fontLayout.h  fontManager.h
include/GooseUI/graphics/gl/: gl_loader.h  gl_renderer.h
include/GooseUI/interfaces/: iRenderer.h  iWidget.h  iWindow.h
include/GooseUI/platform/: freetype_font.h  win32_font.h  x11_window.h
include/GooseUI/platform/unix/: unix_freeType.h
include/GooseUI/platform/win32/: win32_directWrite.h  win32_scaleCalculator.h  win32_window.h
include/GooseUI/platform/win32/widgets/: win32_button.h  win32_window.h
include/GooseUI/platform/x11/: x11_window.h
include/GooseUI/platform/xServer/: x11_window.h
include/GooseUI/platform/xorg/widgets/: xorg_button.h  xorg_window.h
include/GooseUI/widgets/: boxButton.h  button.h  label.h  panel.h  widget_base.h  window.h
include/GooseUI/widgets/base/: text.h  window.h
include/GooseUI/widgets/buttons/: boxButton.h
include/GooseUI/widgets/containers/: panel.h
include/GooseUI/widgets/display/: image.h  label.h  panel.h
include/ZephyrUI/: ZephyrUI.h  zWindow.h
include/ZephyrUI/lib/Win32/: w32_window.h
include/ZephyrUI/zCore/: zEnumerations.h  zEvent.h  zEventDispatcher.h  zUtility.h  zWidget.h
include/ZephyrUI/zPlatform/win32/: zWin32.h  zWin32_zButton.h  zWin32_zWindow.h
include/ZephyrUI/zPlatform/win32api/: win32api.h  win32api_zButton.h  win32api_zWindow.h
include/ZephyrUI/zPlatform/x11/: zX11_zButton.h  zX11_zWindow.h
include/ZephyrUI/zWidget/: zButton.h  zWindow.h
src/: ZephyrUI.cpp  context.cpp  zWindow.cpp
src/abstractions/: iFont.cpp  iWidget.cpp  iWindow.cpp
src/core/: eventDispatcher.cpp  eventloop.cpp
src/events/: eventDispatcher.cpp  eventLoop.cpp
src/font/: atlas.cpp  fontLayout.cpp  fontManager.cpp
src/graphics/: gl_loader.cpp  gl_renderer.cpp  layout.cpp  layoutCalculator.cpp  text.cpp
src/graphics/GL/: glLoader.cpp  glRenderer.cpp
src/graphics/font/: font.cpp  fontAtlas.cpp  fontLayout.cpp  fontManager.cpp
src/graphics/gl/: gl_loader.cpp  gl_renderer.cpp
src/interfaces/: iWidget.cpp
src/lib/Win32/: w32_window.cpp
src/platform/: freetype_font.cpp  win32_font.cpp  win32_window.cpp  x11_window.cpp
src/platform/unix/: unix_freeType.cpp
src/platform/win32/: win32_directWrite.cpp  win32_scaleCalculator.cpp  win32_window.cpp
src/platform/win32/widgets/: win32_button.cpp  win32_window.cpp
src/platform/x11/: x11_window.cpp
src/platform/xServer/: x11_window.cpp
src/platform/xorg/widgets/: xorg_button.cpp  xorg_window.cpp
src/widgets/: boxButton.cpp  button.cpp  label.cpp  panel.cpp  window.cpp
src/widgets/base/: text.cpp  window.cpp
src/widgets/buttons/: boxButton.cpp
src/widgets/containers/: panel.cpp
src/widgets/display/: label.cpp  panel.cpp
src/zCore/: zEventDispatcher.cpp  zUtility.cpp
src/zPlatform/win32/: zWin32.cpp  zWin32_zButton.cpp  zWin32_zWindow.cpp
src/zPlatform/win32api/: win32api.cpp  win32api_zButton.cpp  win32api_zWindow.cpp
src/zPlatform/x11/: zX11_zButton.cpp  zX11_zWindow.cpp
src/zWidget/: zButton.cpp  zWindow.cpp
tests/: CMakeLists.txt  EventTest.cpp  EventTesting.cpp  MultiWindow.cpp  ParentTest.cpp  PosAndScale.cpp  WindowCreation.cpp  WindowTest.cpp  fontTest.cpp  widgetTest.cpp  windowTest.cpp
